--- a/apps/prestador/templates/index_prestador.html
+++ b/apps/prestador/templates/index_prestador.html
@@ -71,11 +71,11 @@
               </a>
             </li>
             <li class="sidebar-item">
-              <a class="sidebar-link" href="{% url 'datos' %}" aria-expanded="false">
+              <a class="sidebar-link" href="{% url 'calificaciones' %}" aria-expanded="false">
                 <span>
                   <iconify-icon icon="solar:file-text-bold-duotone" class="fs-6"></iconify-icon>
                 </span>
-                <span class="hide-menu fs-3">Datos personales</span>
+                <span class="hide-menu fs-3">Calificaciones recibidas</span>
               </a>
             </li>
             <li class="sidebar-item">
@@ -103,8 +103,6 @@
 
           <div class="navbar-collapse justify-content-end px-0" id="navbarNav">
             <ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
-              <a href="#" target="_blank"
-                class="btn btn-primary me-2"><span class="d-none d-md-block">Quiero prestar servicio Ya!</span> <span class="d-block d-md-none">Pro</span></a>
               <a href="#" target="_blank"
                 class="btn btn-success"><span class="d-none d-md-block">Recomendar a un amigo</span> <span class="d-block d-md-none">Free</span></a>
               <li class="nav-item dropdown">
