--- a/apps/ubicacion/templates/formUbicacion.html
+++ b/apps/ubicacion/templates/formUbicacion.html
@@ -1,23 +1,20 @@
-{% extends "directions.html" %}
+{% extends "consumidor_direcciones.html" %}
 {% load tailwind_filters %}
 {% load static %}
-{% block content %}
+{% block formulario %}
 
-    <div class="w-2/3 max-w-2x1 mx-auto sm:px-1 lg:px-8">
-        
-        {% comment %} <div class="grid justify-items-center">
-            <img src={% static "images/logoServiciosya.png"%}>
-        </div> {% endcomment %}
-        <div class="container bg-orange-50 h-12 mb-4">
-            <h1 class="text-1xl font-bold mb-8 text-center">Agregar nueva direccion</h1>
+<div class="col-lg-4 pl-1">
+    <div class="card">
+        <div class="card-body">    
+            <h5 class="card-title fs-6 font-semibold">Agregar dirección</h5>
+                <form action = "{% url 'agrego_direccion' %}" method="post">
+                {% csrf_token %}
+                {{form|crispy}}
+                <button type='submit' class="mt-4 text-white bg-green-400 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Agregar</button>
+                <button type="reset" class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 ml-3 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Limpiar</button>
+                </form>
         </div>
-        <form action = "{% url "oneDirection" %}" method="post">
-
-            {% csrf_token %}
-            {{form|crispy}}
-            <button type='submit' class="mt-4 text-white bg-green-400 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Agregar</button>
-            <button type="reset" class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 ml-3 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Limpiar</button>
-        </form>
-    </div>
+    </div> 
+</div>           
 
 {% endblock %}
