--- a/apps/prestador/templates/prestador_direcciones.html
+++ b/apps/prestador/templates/prestador_direcciones.html
@@ -21,9 +21,14 @@
                   {% for direccion in direcciones %}
                     <tr>
                       <td class="text-center fw-medium">
-                        <button type="button" class="flex justify-center items-center text-white bg-green-700 hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 font-medium rounded-full px-3 py-3 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
-                          <img src="{% static 'images/dash/logos/file-search.svg' %}" alt="Ícono" class="w-6 h-6">
-                        </button>
+                        <div class="d-flex gap-2 justify-content-center">
+                          <a href="{% url 'modificar_dire_prestador' direccion_id=direccion.id %}" class="btn btn-warning">
+                            Modificar
+                          </a>                 
+                          <a href="{% url 'eliminar_dire_prestador' direccion_id=direccion.id %}" class="btn btn-danger" data-toggle="modal" data-target="#confirmarEliminarModal">
+                            Eliminar
+                          </a>
+                        </div>
                       </td>
                       <td class="text-center fw-medium">{{direccion.localidad}}</td>
                       {% comment %} <td>
@@ -42,10 +47,18 @@
             <div class="card-body">    
               <h5 class="card-title fs-6 font-semibold">Agregar dirección</h5>
               <form method="post">
+                
                 {% csrf_token %}
-                {{form|crispy}}
-                <button type='submit' class="mt-4 text-white bg-green-400 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Agregar</button>
-                <button type="reset" class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 ml-3 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Limpiar</button>
+                {{ form|crispy }}
+
+                <div class="flex gap-2 mt-4">
+                  <button type="submit" class="flex items-center text-white bg-blue-400 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-3 py-2.5 gap-2 me-2 mb-2">
+                    <i class="fas fa-plus-circle"></i> Agregar
+                  </button>
+                  <button type="reset" class="flex items-center text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-3 py-2.5 gap-2 me-2 mb-2 ml-3">
+                    <i class="fas fa-eraser"></i> Limpiar
+                  </button>
+                </div>
               </form>
             </div>
         </div> 
