--- a/apps/consumidor/templates/index_consumidor.html
+++ b/apps/consumidor/templates/index_consumidor.html
@@ -118,6 +118,8 @@
         </nav>
       </header>
       <!--  Header End -->
+
+      <div class="ml-10">
         <div class="pt-20">
 
           {% block content %} {% endblock %}
@@ -125,7 +127,8 @@
         
         <div class="py-6 px-6 text-center">
           <p class="mb-0 fs-4">Design and Developed by SevenUp Group</p>
-        </div>    
+        </div>
+      </div>    
       
   </div>
   <script src="{% static 'libs/jquery/dist/jquery.min.js' %}"></script>
