--- a/apps/prestador/templates/prestador_direcciones.html
+++ b/apps/prestador/templates/prestador_direcciones.html
@@ -42,7 +42,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 pl-1">
+    <div class="col-lg-4">
         <div class="card">
             <div class="card-body">    
               <h5 class="card-title fs-6 font-semibold">Agregar dirección</h5>
