--- a/apps/prestador/templates/prestador_panel.html
+++ b/apps/prestador/templates/prestador_panel.html
@@ -7,6 +7,14 @@
     <div class="col-lg-12 pl-1">
       <div class="card ">
         <div class="card-body ">
+          {% if messages %}
+            {% for message in messages %}
+              <div class="alert alert-success alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+            {% endfor %}
+          {% endif %}
           <h5 class="card-title fs-6 font-semibold">Bienvenid@ {{ usuario.nombre}} {{ usuario.apellido }} </h5>
             <div class="table-responsive">
               <table class="table text-nowrap align-middle mb-0">
