--- a/apps/prestador/templates/index_prestador.html
+++ b/apps/prestador/templates/index_prestador.html
@@ -77,6 +77,12 @@
               </a>
             </li>
             <li class="sidebar-item">
+              <a class="sidebar-link" href="{% url 'servicios_prestados' %}">
+                <span><iconify-icon icon="solar:list-bold-duotone" class="fs-6"></iconify-icon></span>
+                <span class="hide-menu">Servicios ofrecidos</span>
+              </a>
+            </li>
+            <li class="sidebar-item">
               <a class="sidebar-link" href="{% url 'calificaciones' %}" aria-expanded="false">
                 <span>
                   <iconify-icon icon="solar:file-text-bold-duotone" class="fs-6"></iconify-icon>
