--- a/apps/consumidor/templates/index_consumidor.html
+++ b/apps/consumidor/templates/index_consumidor.html
@@ -48,6 +48,14 @@
               </a>
             </li>
             <li class="sidebar-item">
+              <a class="sidebar-link" href="{% url 'servicios' %}"aria-expanded="false">
+                <span>
+                  <iconify-icon icon="solar:magnifer-bold-duotone" class="fs-6"></iconify-icon>
+                </span>
+                <span class="hide-menu fs-3">Buscar servicios</span>
+              </a>
+            </li>
+            <li class="sidebar-item">
               <a class="sidebar-link" href="{% url 'contratos_consumidor' %}"aria-expanded="false">
                 <span>
                   <iconify-icon icon="solar:layers-minimalistic-bold-duotone" class="fs-6"></iconify-icon>
