--- a/templates/lista_de_servicios.html
+++ b/templates/lista_de_servicios.html
@@ -15,6 +15,12 @@
     data-sidebar-position="fixed" data-header-position="fixed">
     <div class="container mt-5">
       <h1 class="text-center">Listado de Servicios</h1>
+      <div class="mb-3">
+        <a href="{% url 'consumidor' %}" class="btn btn-secondary">
+          <iconify-icon icon="material-symbols:arrow-back-rounded" class="fs-6"></iconify-icon>
+          Volver 
+        </a>
+      </div>
 
       <!-- Formulario de filtros -->
       <form method="get" class="mb-4">
